@@ -1,5 +1,10 @@
 2006-05-10  Julien Puydt  <jpuydt@free.fr>
 
+	* src/devices/videooutput.cpp, src/devices/videooutput.h: Partial fix
+	for #340824.
+
+2006-05-10  Julien Puydt  <jpuydt@free.fr>
+
 	* src/devices/videoinput.h: Partial fix for #340824.
 
 2006-05-10  Julien Puydt  <jpuydt@free.fr>
